--- a/src/locales/it.json
+++ b/src/locales/it.json
@@ -69,6 +69,7 @@
     "title": "Menu",
     "subtitle": "Scopri la nostra selezione",
     "allergens": "Allergeni",
+    "loading": "Caricamento menu...",
     "itemsCount": "{count} pizza{count, plural, =1 {} other {e}}",
     "filters": {
       "allCategories": "Tutte le categorie",
@@ -78,6 +79,27 @@
     },
     "cta": {
       "action": "Azione"
+    },
+    "categories": {
+      "The Classics": "Le Classiche",
+      "Cheese Pizzas": "Le Formaggiose",
+      "Cured Meat Pizzas": "I Salumi",
+      "Seafood Pizzas": "Le Marine",
+      "Meat Pizzas": "Le Carnivore",
+      "Vegetarian Pizzas": "Le Vegetariane",
+      "Signature Pizzas": "Le Specialità",
+      "Calzones": "I Calzoni",
+      "Desserts": "I Dessert"
+    },
+    "allergenLabels": {
+      "Vegetarian": "Vegetariano",
+      "Gluten": "Glutine",
+      "Milk": "Latte",
+      "Eggs": "Uova",
+      "Fish": "Pesce",
+      "Nuts": "Frutta a guscio",
+      "Mustard": "Senape",
+      "Soy": "Soia"
     }
   },
   "allergens": {
