--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -287,12 +287,10 @@
       "intro": "Unsere Geschichte beginnt nicht mit Mehl, sondern mit dem Messer. Bevor es eine Pizzeria wurde, war unser Haus eine unumgängliche Adresse in Cavalaire, gegründet 1936. Ab 1966 wurde es zur \"Maison Darius\", einer familiengeführten Metzgerei, die in der Landschaft von Cavalaire verwurzelt war und Handwerkskunst mit kompromissloser Produktqualität verband.",
       "conclusion": "Im Jahr 2020 begann ein neues Kapitel. Die Leidenschaft für Gastronomie und außergewöhnliche Produkte verwandelte den Hackklotz in einen Holzofen. Maison Darius wurde zu Darius Pizza.\n\nDie Kulisse hat sich geändert, aber die Seele ist intakt. Wir haben das Erbe der Metzgerei bewahrt: die Liebe zum frischen Produkt, den Respekt vor handwerklichem Können und eine Besessenheit für den Geschmack. Diesen Anspruch, den wir an unser Fleisch stellten, wenden wir heute auf jede einzelne Zutat an, aus der unsere Pizzen bestehen.",
       "image1": {
-        "alt": "Ladenfront Darius Pizza seit 2020",
-        "src": "/static/pizza-storefront.webp"
+        "alt": "Ladenfront Darius Pizza seit 2020"
       },
       "image2": {
-        "alt": "Ladenfront Metzgerei Darius vor 2020",
-        "src": "/static/about-kitchen.webp"
+        "alt": "Ladenfront Metzgerei Darius vor 2020"
       }
     },
     "section2": {
@@ -303,8 +301,7 @@
         "step": "Schritt 1: Präzises Kneten",
         "content": "Alles beginnt mit einer kontrollierten Hydratation und einem langsamen Kneten. Wir kontrollieren die Temperatur unseres Teigs in jedem Moment, um ihn nicht zu \"stressen\". Diese Phase, die Stockgare (erste Gärung), ermöglicht die Entwicklung des anfänglichen Glutennetzwerks, das dem Teig seine Struktur gibt, während die Aromen unseres Mehls erhalten bleiben.",
         "image": {
-          "alt": "Teigkugel nach dem Kneten",
-          "src": "/static/dough-ball-after-kneading.webp"
+          "alt": "Teigkugel nach dem Kneten"
         }
       },
       "card2": {
@@ -312,8 +309,7 @@
         "step": "Schritt 2: Die langsame Reifung (+48h)",
         "content": "Hier geschieht die Magie. Unsere Teiglinge ruhen mindestens 48 Stunden kontrolliert gekühlt. Während dieser langen Reifung bauen die natürlichen Enzyme der Hefe das Glutennetzwerk ab. Die komplexen Proteinketten werden \"vorverdaut\".\n\nDas Ergebnis für Sie? Ein unglaublich leichter, luftiger und leicht verdaulicher Teig. Kein Völlegefühl mehr nach dem Essen.",
         "image": {
-          "alt": "Teiglinge bei der kalten Reifung",
-          "src": "/static/dough-balls-cold-maturing.webp"
+          "alt": "Teiglinge bei der kalten Reifung"
         }
       },
       "card3": {
@@ -321,8 +317,7 @@
         "step": "Schritt 3: Die Offenbarung im Ofen",
         "content": "Während der Reifung wandeln andere Enzyme die komplexe Stärke des Mehls in einfache Zucker um. Beim Backen bei hoher Temperatur treffen diese Zucker auf Aminosäuren. Das ist die berühmte Maillard-Reaktion. Sie bäckt nicht nur: Sie karamellisiert den Teig, erzeugt diese goldene, gefleckte Kruste (\"Leoparding\") und setzt eine Palette unvergleichlicher Röstaromen frei.",
         "image": {
-          "alt": "Goldene und luftige Pizzakruste",
-          "src": "/static/hero-pizza.webp"
+          "alt": "Goldene und luftige Pizzakruste"
         }
       }
     },
@@ -334,8 +329,7 @@
         "step": "Der Charakter der Alpen: Moulin Céard",
         "content": "Die Grundlage unseres Teigs ist unser Mehl. Wir haben uns für Moulin Céard entschieden, eine Familienmühle in den Hautes-Alpes, deren Know-how seit 1820 weitergegeben wird.\n\nSie wählen regionale Weizensorten aus, oft Label Rouge, um ein charaktervolles Mehl ohne Zusatzstoffe herzustellen. Diese Wahl verleiht unserem Teig seinen rustikalen Geschmack und seine einzigartige Fähigkeit, sich während der 48-stündigen Reifung zu entfalten. Das ist unser Bekenntnis zu Terroir und Rückverfolgbarkeit.",
         "image": {
-          "alt": "Mehl von Moulin Céard aus den Hautes-Alpes",
-          "src": "/static/moulin-ceard-flour.webp"
+          "alt": "Mehl von Moulin Céard aus den Hautes-Alpes"
         }
       },
       "card2": {
@@ -343,8 +337,7 @@
         "step": "Der Anspruch der Metzgerei",
         "content": "Wir haben nicht vergessen, woher wir kommen. Das Erbe von Maison Darius ist unsere Kompromisslosigkeit bei der Qualität von Fleisch und Wurstwaren.\n\nWir wählen unsere Produkte mit dem Auge und dem Anspruch des Metzgers aus: hochwertiger Kochschinken, handwerklicher Coppa, Parmaschinken... Diese Expertise ist Ihre Garantie, auf unseren Pizzen geschmackvolle, reichhaltige Produkte zu finden, die Sie nirgendwo anders finden werden.",
         "image": {
-          "alt": "Hochwertige Wurstwaren und Fleisch",
-          "src": "/static/charcuterie.webp"
+          "alt": "Hochwertige Wurstwaren und Fleisch"
         }
       },
       "card3": {
@@ -352,8 +345,7 @@
         "step": "Das Herz Italiens",
         "content": "Eine Pizza ist eine Verbindung zwischen Lokalem und Authentischem. Für die Grundpfeiler der italienischen Gastronomie beziehen wir direkt von den Besten.\n\nUnsere Tomaten? San Marzano g.U. (geschützte Ursprungsbezeichnung), sonnengereift am Fuße des Vesuvs. Unsere Mozzarella? Schmelzender Fior di Latte oder echte Büffelmozzarella Campana g.U. Natives Olivenöl extra, 24 Monate gereifter Parmigiano Reggiano... Wir importieren die Sonne Italiens.",
         "image": {
-          "alt": "Authentische italienische g.U.-Produkte",
-          "src": "/static/italian-products.webp"
+          "alt": "Authentische italienische g.U.-Produkte"
         }
       }
     },
